@@ -203,6 +203,7 @@
                 <configuration>
                     <forkCount>1C</forkCount>
                     <reuseForks>true</reuseForks>
+                    <argLine>--enable-native-access=ALL-UNNAMED -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                     <systemPropertyVariables>
                         <spring.datasource.url>jdbc:sqlite:file:target/jupiter-test-${surefire.forkNumber}.sqlite?journal_mode=WAL&amp;foreign_keys=on</spring.datasource.url>
                     </systemPropertyVariables>
